@startuml
'https://plantuml.com/class-diagram
skinparam linetype ortho

package models.fields {
abstract Field {
 # name : string
 # iD : int
 + {abstract} fieldEffect(gameStateDTO : GameStateDTO) : GameStateDTO
}

class Property {
 - color : String
 - price : int
 - owner : Player
 + auction(gameStateDTO : GameStateDTO) : GameStateDTO
}
class Brewery {
 - rent0 : int
 - rent1 : int
}
class Ferry {
    - rent : int[0..3]

    + setRent(index : int, rentAmound : int)
}
class Street {
    - color : String
    - housePrice : int
    - houseAmount : int = 0
    - hotel : boolean = false
    - rent : int[0..5]

    + setPrice(price : String)
    + setRent(index : int, rentAmound : int)
}
class Empty{

}

class Chance {
- number : int
}

class Jail {
 - inJail : Playey[]
 + getInJail() : Player[]
 + isInJail(Player) : boolean
 + setInJailAdd(player : Player)
 + setInJailRemove(player : Player)
}

class ToJail {
 -spaceToJail : int
}



Field <|-right- Property
Property <|-up- Street
Property <|-down- Ferry
Property <|-down- Brewery
Field <|-- Chance
Field <|-- Jail
Field <|-up- ToJail
Field <|-up- Empty

}
@enduml